midterm backups/vm4 (rns)/iptables
# Generated by iptables-save v1.8.4 on Fri Nov 20 01:09:18 2020
*filter
:INPUT ACCEPT [915:66285]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [68890:8610874]
:LOGGING - [0:0]
-A INPUT -s 192.168.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p icmp -j ACCEPT
-A INPUT -s 172.16.0.0/16 -p icmp -j ACCEPT
-A INPUT -s 192.168.24.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.24.0/24 -d 192.168.24.51/32 -p udp -m udp --dport 514 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j LOGGING
-A INPUT -j LOGGING
-A INPUT -p udp -m udp --dport 514 -j LOGGING
-A LOGGING -p tcp -m tcp --dport 22 -j LOG
-A LOGGING -j LOG
-A LOGGING -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Fri Nov 20 01:09:18 2020
